# NeoStats

./: .gitattributes  .indent.pro  AAA-NO-LONGER-USE-SOURCEFORGE  AUTHORS  BUGS  Bahamut.c  Bahamut.h  CREDITS  ChangeLog  Config  FAQ  INSTALL  INSTALL.pt  INSTNOTES  INSTNOTES.svn  Ircu.c  Ircu.h  LICENCE  Makefile  Makefile.am  Makefile.in  Makefile.inc  Makefile.inc.in  NEWS  QuantumIRCd.c  QuantumIRCd.h  README  README.pt  README.win32  RELNOTES  RelNotes.txt  TODO  Ultimate.c  Ultimate.h  Unreal.c  Unreal.h  UnrealModes.h  Viagra.c  Viagra.h  acconfig.h  (+79 more)
adns/: adns.h  (+14 more)
include/: Makefile.am  Makefile.in  MiniMessage.h  MiniMessageGateway.h  MuscleSupport.h  adns.h  adns_win32.h  adnsdlist.h  adnsinternal.h  adnstvarith.h  auth.h  bans.h  base64.h  botinfo.h  bots.h  channels.h  commands.h  conf.h  config.h.in  configwin32.h  confuse.h  ctcp.h  dcc.h  dl.h  dns.h  dotconf.h  events.h  exclude.h  hash.h  helpstrings.h  ircd.h  ircprotocol.h  ircrecv.h  ircsend.h  ircstring.h  lang.h  list.h  log.h  main.h  modes.h  (+25 more)
lib/: Makefile.am  Makefile.in
lib/adns/: Makefile.am  Makefile.in  adns.h  adns_unix_calls.c  adns_win32.h  adnscheck.c  adnsgeneral.c  adnsinternal.h  adnsquery.c  adnsreply.c  check.c  dlist.h  event.c  general.c  internal.h  parse.c  query.c  reply.c  setup.c  transmit.c  tvarith.h  types.c
lib/adnswin32/: adns.h  adns.vcproj  adns_win32.h  check.c  configwin32.h  dlist.h  event.c  general.c  internal.h  parse.c  poll.c  query.c  reply.c  setup.c  transmit.c  tvarith.h  types.c
lib/curl/: Makefile.am  Makefile.in  base64.c  config-win32.h  content_encoding.c  cookie.c  cookie.h  curl.h  curl.vcproj  dict.c  easy.c  escape.c  file.c  formdata.c  ftp.c  getdate.c  getenv.c  getinfo.c  gtls.c  hash.h  hostares.c  hostasyn.c  hostip.c  hostip.h  hostip4.c  hostip6.c  hostsyn.c  hostthre.c  http.c  http_chunks.c  http_digest.c  http_digest.h  http_negotiate.c  http_ntlm.c  inet_ntop.c  inet_pton.h  ldap.c  llist.c  llist.h  md5.c  (+29 more)
lib/dbm/: Makefile.am  Makefile.in
lib/event/: Makefile.am  Makefile.in  VERSION  buffer.c  devpoll.c  epoll.c  epoll_sub.c  evbuffer.c  event.c  event.h  kqueue.c  log.c  log.h  poll.c  rtsig.c  select.c
lib/execinfo/: Makefile.in
lib/gdbm/: Makefile.am  Makefile.in  Makefile.in.old  findkey.c  gdbm.vcproj  gdbmexists.c  gdbmfetch.c  gdbmopen.c  gdbmreorg.c  gdbmseq.c  gdbmsetopt.c  systems.h  version.c
lib/keeper/: Makefile.am  Makefile.in  dirent.c  keeper.vcproj  kp_cache.c  kp_dir.c  kp_enum.c  kp_get.c  kp_iface.c  kp_recur.c  kp_set.c  kp_util.c  kp_util.h
lib/nxml/: Makefile.am  Makefile.in  mrss.h  mrss_download.c  mrss_edit.c  mrss_free.c  mrss_generic.c  mrss_internal.h  mrss_options.c  mrss_parser.c  mrss_search.c  mrss_write.c  nxml.h  nxml.vcproj  nxml_download.c  nxml_dtd.c  nxml_easy.c  nxml_edit.c  nxml_entity.c  nxml_error.c  nxml_free.c  nxml_init.c  nxml_internal.h  nxml_namespace.c  nxml_parser.c  nxml_string.c  nxml_tools.c  nxml_utf.c  nxml_write.c
lib/pcre/: Makefile.am  Makefile.in  dftables.c  pcre.h  pcre.vcproj  pcredftables.vcproj
lib/rta/: Makefile.am  Makefile.in  api.c  parse.tab.h  token.c  token.l
lib/rtawin32/: api.c  do_sql.c  rta.h  rta.vcproj  rtatables.c  token.c
lib/sqlsrv/: Makefile  api.c  rta.h
modules/dbm/: Makefile.am  Makefile.in  convertdb.c
modules/statserv/: GeoIPCity.c  Makefile.am  Makefile.in  channel.c  channel.h  database.c  database.h  htmlstats.c  htmlstats.h  network.c  network.h  server.c  server.h  sqlstats.h  ss_help.c  stats.c  stats.h  statserv.c  statserv.h  statserv.vcproj  statsrta.c  statsrta.h  tld.c  tld.h  user.c  user.h  version.c  version.h
modules/textserv/: Makefile.am  Makefile.in  barmaid  barmaid.tsdb  help.c  icecream.tsdb  loveserv.tsdb  main.c  moraleserv  moraleserv.tsdb  textserv.h  textserv.vcproj  waitress  waitress.tsdb
src/: Bahamut.c  Ircu.h  Makefile.am  Makefile.in  Makefile.inc.in  MiniMessage.c  MiniMessageGateway.c  NV.xs  NeoStats.pm  QuantumIRCd.c  QuantumIRCd.h  Ultimate.h  Unreal.c  Viagra.h  adns_unix_calls.c  adnscheck.c  adnsevent.c  adnsgeneral.c  adnsparse.c  adnsquery.c  adnsreply.c  adnssetup.c  adnstransmit.c  adnstypes.c  auth.c  auth.h  bans.c  bans.h  base64.c  botinfo.c  bots.c  bots.h  channels.c  channels.h  chans.c  chans.h  commands.c  commands.h  conf.c  conf.h  (+87 more)
src/Perl_NamedVars/: Changes  MANIFEST  Makefile.PL  NV.pm  NV.xs  test.pl
src/adns/: Makefile  Makefile.am  Makefile.in  adns.h  check.c  event.c  general.c  internal.h  parse.c  query.c  setup.c  transmit.c  types.c
src/adnswin32/: adns.h  adns_win32.h  config.h  parse.c  reply.c  transmit.c
src/curl/: Makefile.am  Makefile.in  aclocal.m4  base64.c  config.h.in  configure.in  content_encoding.c  curl.h  getdate.c  getinfo.c  hash.c  http_negotiate.c  if2ip.c  inet_pton.c  mprintf.c  multi.c  multi.h  security.c  sendf.c  share.h  ssluse.c  strequal.c
src/dbm/: Makefile.am  Makefile.in  bdb.c  gdbm.c  gdbm.vcproj
src/keeper/: Makefile  Makefile.am  Makefile.in  keeper.h  kp_cache.c  kp_dir.c  kp_enum.c  kp_get.c  kp_iface.c  kp_recur.c  kp_set.c  kp_sort.c  kp_util.c  kp_util.h
src/libltdl/: Makefile.am  Makefile.in  aclocal.m4  configure
src/modules/: Makefile  Makefile.am  Makefile.in
src/pcre/: Makefile  Makefile.am  Makefile.in  configwin32.h  internal.h
src/protocol/: Makefile.am  Makefile.in  asuka.c  asuka.vcproj  bahamut.c  bahamut.h  bahamut.vcproj  bahamut14.c  bahamut14.h  bahamut14.vcproj  bahamut18.c  bahamut18.h  bahamut18.vcproj  client.c  client.h  client.vcproj  hybrid6.c  hybrid6.vcproj  hybrid7.c  hybrid7.h  hybrid7.vcproj  ircu.c  ircu.h  ircup10.c  ircup10.h  ircup10.vcproj  ircup10base.c  liquid.c  liquid.h  mystic.c  mystic.h  nefarious.c  neoircd.c  neoircd.h  plexus.c  plexus.h  plexus.vcproj  protocol.txt  quantum.c  quantum.h  (+20 more)
src/sqlsrv/: Makefile  Makefile.in  do_sql.c  rta.h  rtatables.c  token.c
src/tools/: Makefile.in  README.kptool  kp_exp.c  kp_imp.c  kptool.c  kptool.h
src/win32/: Rules.rules  getopt.c  neostats.aps  neostats.conf  neostats.rc  neostatsversion.rc  resource.h  winmain.c
(+574 files in other folders)
